app/javascript/styles/mastodon/components.scss
/* ... */
.react-toggle--focus,
.react-toggle:focus-within {
  outline: var(--outline-focus-default);
  outline-offset: 2px;

  .react-toggle-track {
    border-color: transparent;
  }
}

.react-toggle-screenreader-only,
.sr-only {
  border: 0;
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.react-toggle--disabled {
  cursor: not-allowed;
  opacity: 0.5;
  transition: opacity 0.25s;
}

.react-toggle-track {
  width: 32px;
  height: 20px;
  padding: 0;
  border-radius: 10px;
  background-color: rgb(from var(--color-bg-brand-softer) r g b / 50%);
  border: 1px solid rgb(from var(--color-text-brand) r g b / 50%);
  box-sizing: border-box;

  .react-toggle:hover:not(.react-toggle--disabled) & {
    background-color: rgb(
      from var(--color-bg-brand-softer) r g b /
        calc(50% + var(--overlay-strength-brand))
    );
  }

  .react-toggle--checked & {
    background-color: var(--color-bg-brand-base);
    border-color: var(--color-bg-brand-base);
  }

  .react-toggle--checked:not(.react-toggle--disabled):hover & {
    background-color: var(--color-bg-brand-base-hover);
  }
}

.react-toggle-track-check,
.react-toggle-track-x {
  display: none;
}

.react-toggle-thumb {
  position: absolute;
  top: 2px;
  inset-inline-start: 2px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--color-text-on-brand-base);
  box-sizing: border-box;
  transition: all 0.25s ease;
  transition-property: border-color, left;

  .react-toggle--checked & {
    inset-inline-start: 32px - 16px - 2px;
    border-color: var(--color-bg-brand-base);
  }
}

.follow_requests-unlocked_explanation,
.switch-to-advanced {
  color: var(--color-text-secondary);
  background-color: var(--color-bg-secondary);
  padding: 15px;
  border-radius: 4px;
  margin-top: 4px;
  margin-bottom: 12px;
  font-size: 13px;
  line-height: 18px;

  a {
    color: var(--color-text-brand);
    font-weight: bold;
  }
}

.column-link {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  gap: 8px;
  width: 100%;
  padding: 10px;
  padding-inline-start: 14px;
  overflow: hidden;
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
  white-space: nowrap;
  color: color-mix(
    in oklab,
    var(--color-text-primary),
    var(--color-text-secondary)
  );
  background: transparent;
  border: 2px solid transparent;
  border-radius: 4px;

  &:hover,
  &:active,
  &:focus-visible {
    color: var(--color-text-primary);
  }

  &.active {
    color: var(--color-text-brand);
  }

  &:focus-visible {
    outline: none;
    border-color: var(--color-text-brand);
    background: var(--color-bg-brand-softer);
  }

  &--logo {
    padding: 10px;
  }
}

.column-link__badge {
  display: inline-block;
  border-radius: 4px;
  font-size: 12px;
  line-height: 19px;
  font-weight: 500;
  background: var(--color-bg-primary);
  padding: 4px 8px;
  margin: -6px 10px;
}

.column-subheading {
  background: var(--color-bg-secondary);
  color: var(--color-text-secondary);
  padding: 8px 20px;
  font-size: 12px;
  font-weight: 500;
  text-transform: uppercase;
  cursor: default;
}

.getting-started__wrapper {
  flex: 0 0 auto;
}

.flex-spacer {
  flex: 1 1 auto;
}

.getting-started {
  color: var(--color-text-tertiary);
  overflow: auto;
  border: 1px solid var(--color-border-primary);
  border-top: 0;

  &__trends {
    flex: 0 1 auto;
    opacity: 1;
    animation: fade 150ms linear;
    margin-top: 10px;

    h4 {
      border-bottom: 1px solid var(--color-border-primary);
      padding: 10px;
      font-size: 12px;
      text-transform: uppercase;
      font-weight: 500;

      a {
        color: var(--color-text-secondary);
        text-decoration: none;
      }
    }

    .trends__item {
      border-bottom: 0;
      padding: 10px;

      &__current {
        color: var(--color-text-secondary);
      }
    }
  }
}

.keyboard-shortcuts {
  padding: 8px 0 0;
  overflow: hidden;

  thead {
    position: absolute;
    inset-inline-start: -9999px;
  }

  td {
    padding: 0 10px 8px;
  }

  kbd {
    display: inline-block;
  }
}

.status-card {
  display: flex;
  align-items: center;
  position: relative;
  font-size: 14px;
  color: var(--color-text-secondary);
  margin-top: 14px;
  text-decoration: none;
  overflow: hidden;
  border: 1px solid var(--color-border-primary);
  border-radius: 8px;
  contain: inline-size layout paint style;

  &.bottomless {
    border-radius: 8px 8px 0 0;
  }

  &__actions {
    bottom: 0;
    inset-inline-start: 0;
    position: absolute;
    inset-inline-end: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    & > div {
      color: var(--color-text-on-media);
      background: rgb(from var(--color-bg-media) r g b / 60%);
      border-radius: 8px;
      padding: 12px 9px;
      backdrop-filter: $backdrop-blur-filter;
      flex: 0 0 auto;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    button,
    a {
      display: inline;
      color: var(--color-text-on-media);
      background: transparent;
      border: 0;
      padding: 0 8px;
      text-decoration: none;
      font-size: 18px;
      line-height: 18px;

      &:hover,
      &:active,
      &:focus {
        color: var(--color-text-on-media);
      }
    }

    a {
      font-size: 19px;
      position: relative;
      bottom: -1px;
    }
  }
}

a.status-card {
  cursor: pointer;

  &:hover,
  &:focus,
  &:active {
    .status-card__title,
    .status-card__host,
    .status-card__author,
    .status-card__description {
      color: var(--color-text-brand);
    }
  }
}

.status-card a {
  color: inherit;
  text-decoration: none;

  &:hover,
  &:focus,
  &:active {
    .status-card__title,
    .status-card__host,
    .status-card__author,
    .status-card__description {
      color: var(--color-text-brand);
    }
  }
}
/* ... */

